# orbitvm

./: .clang-format  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build-script  build.sh  description  orbit.docopt  test.orbit  tests.sh
build.js/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build.js/libs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.js/libs/ast/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.js/libs/codegen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.js/libs/csupport/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.js/libs/parser/: Makefile  (+2 more)
build.js/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ide/OrbitVM.xcodeproj/: project.pbxproj
include/orbit/: common.h  compiler.h  orbit.h
libs/: CMakeLists.txt
libs/ast/: CMakeLists.txt  alloc.c  ast_alloc.c  ast_builders.c  ast_core.c  ast_printer.c  builders.c  context.c  diag.c  diag_formatter.c  diag_private.h  json.c  printer.c  scope.c  traversal.c  type.c
libs/codegen/: CMakeLists.txt  builder.c  builder.h  codegen.c
libs/console/: CMakeLists.txt  console.c
libs/csupport/: CMakeLists.txt  console.c  diag.c  diag_formatter.c  rcarray.c  rcmap.c  source.c  string.c  tokens.c
libs/mangling/: CMakeLists.txt  demangle.c  mangle.c
libs/parser/: CMakeLists.txt  ast.c  compiler_utils.c  lexer.c  orbit_ast.h  orbit_lexer.c  orbit_lexer.h  orbit_parser.c  orbit_parser.h  orbit_type.c  parser.c  parser_lexing.c  parser_private.c  parser_private.h  recognizers.h  recursive_descent.c  recursive_descent.h  type.c  wcwidth.h
libs/rt2/: CMakeLists.txt  buffer.c  chunk.c  debug.c  gc.c  invocation.c  map.c  memory.c  value.c  value_array.c  value_object.c  value_string.c  vm.c
libs/runtime/: CMakeLists.txt  gc.c  objfile.c  orbit_gc.c  orbit_objfile.c  orbit_objfile.h  orbit_opcodes.h  orbit_rtutils.c  orbit_utils.c  orbit_utils.h  orbit_value.c  orbit_value.h  orbit_vm.c  rtutils.c  value.c  vm.c
libs/sema/: CMakeLists.txt  demangle.c  errors.c  errors.h  expr_resolver.c  expr_resolver.h  helpers.c  helpers.h  mangle.c  sema.c  sema_private.h  type.c  type_private.h  typecheck.c
libs/source/: CMakeLists.txt  source.c  tokens.c
libs/stdlib/: CMakeLists.txt  orbit_stdlib.c  stdlib.c
libs/type/: CMakeLists.txt  type.c
libs/utils/: CMakeLists.txt  hashing.c  memory.c  orbit_pack.c  orbit_platforms.h  orbit_utf8.c  orbit_utf8.h  pack.c  rcarray.c  rcmap.c  string.c  utf8.c  wcwidth.c
specs/: README.md  asm.bnf.txt  module-arch.md  name-mangling.md  orbit-il.bnf.txt  orbit-il.ebnf.txt  orbit-il.example.il  orbit.ebnf  orbit.ebnf.txt  type-system.md
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  compiler_utils.c  compiler_utils.h  orbit_cliutils.h  orbit_compiler.c  orbit_lexer.c  orbit_lexer.h  orbit_parser.c  orbit_parser.h  orbit_tokens.h  orbit_type.c  wcwidth.c  wcwidth.h
src/liborbit/: orbit_gc.c  orbit_gc.h  orbit_hashmap.c  orbit_hashmap.h  orbit_objfile.c  orbit_objfile.h  orbit_opcodes.h  orbit_pack.c  orbit_pack.h  orbit_platforms.h  orbit_stdlib.c  orbit_stdlib.h  orbit_string.c  orbit_string.h  orbit_utf8.c  orbit_utf8.h  orbit_utils.c  orbit_utils.h  orbit_value.c  orbit_value.h  orbit_vm.c  orbit_vm.h  orbit_vtable.c  orbit_vtable.h
src/orbit/: CMakeLists.txt  orbit_gc.c  orbit_gc.h  orbit_objfile.c  orbit_objfile.h  orbit_opcodes.h  orbit_pack.c  orbit_pack.h  orbit_platforms.h  orbit_stdlib.c  orbit_stdlib.h  orbit_utf8.c  orbit_utf8.h  orbit_utils.c  orbit_utils.h  orbit_value.c  orbit_value.h  orbit_vm.c  orbit_vm.h
src/runtime/: CMakeLists.txt  main.c
src/tests/: main.c
src/tests-vm/: CMakeLists.txt  main.c  orbit_double.h  orbit_hashmap.h  orbit_string.h  orbit_vtable.h  tests-vm.c  tests_vm.c
tests/: CMakeLists.txt
tests/failing/: implicit-cast.orbit
tests/fixed/: #1-parsing-oneline-struct.orbit  1-parsing-oneline-struct.orbit.bak  3-parsing-orphan-stringliterals.orbit  7.ast-anonymous-block.orbit  CMakeLists.txt  parsing-call-expr.orbit  parsing-call-expr.orbit.bak
tests/issues/: 7.ast-anonymous-block.orbit
tests/runtime/: CMakeLists.txt  tests_vm.c
tools/: CMakeLists.txt  test_commit.sh  test_valid.sh
tools/command/: CMakeLists.txt  main.c
tools/compiler/: CMakeLists.txt  orbit_compiler.c
tools/git-hooks/: pre-commit.sh  run-tests.sh
tools/testing/: test-valid.sh
(+95 files in other folders)
